Actions
Bug #12121
closedprtconf: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../pdevinfo.c:299:8: error: cast between incompatible function types from 'void (*)(struct di_node *)' to 'int (*)(struct di_node *, void *)' [-Werror=cast-function-type] (int (*)(di_node_t, void *))
Testing done: build/install/boot
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit f772f0f818f73daf7235ea98001eb45736057eb4
commit f772f0f818f73daf7235ea98001eb45736057eb4 Author: Toomas Soome <tsoome@me.com> Date: 2019-12-27T18:05:07.000Z 12121 prtconf: cast between incompatible function types Reviewed by: Andy Fiddaman <andy@omniosce.org> Reviewed by: C Fraire <cfraire@me.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions